--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -15,7 +15,7 @@
         <div class="grid-item" onclick="updateBoard(id)" id="7">T</div>
         <div class="grid-item" onclick="updateBoard(id)" id="8">O</div>
         <div class="grid-item" onclick="updateBoard(id)" id="9">E</div>
-        <div class="infoArea" id="infoArea" value="0">
+        <div class="infoArea" id="infoArea">
           <p>When Ready</p> 
           <p>Press Start</p> 
           <button onclick="startGame()">START</button>
